Fixed issue with genres going out of container when to many genres in list. Fixed with flex-wrap: wrap;.

--- a/src/components/MovieDetails.css
+++ b/src/components/MovieDetails.css
@@ -36,14 +36,15 @@
 .movie-genre-list ul {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   padding: 0;
+  margin: 5px 5px 20px 0;
   /* justify-content: center; */
 }
 
 .movie-genre-list li {
   list-style-type: none;
   font-size: small;
-  margin: 5px 5px 20px 0;
 }
 
 .read-more-button {
